# cocles

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  tutorial.hpp
apps/: cocles.cpp
design/: database_design.md  monetary_representation.md  random_notes.md  rules.md
include/: date  doctest  gtest  math  rapidjson
include/date/: date.hpp
include/json/: json.hpp
old_src/: main.cpp
old_src/ledger/: adjustment.hpp  ledger.cpp  money.cpp  transaction.hpp
old_src/ledger/internal/: AccountEntry.hpp  Database.hpp  EntryProxy.hpp  FilteredTableView.hpp  ListNode.hpp  RecordKeeper.hpp  account.cpp  ledger_impl.hpp
src/: Application.cpp  Application.hpp  account_table.cpp  account_table.hpp  adjustment_table.cpp  adjustment_table.hpp  amount.cpp  amount.hpp  decimal.cpp  decimal.hpp  identifier.cpp  identifier.hpp  integer.cpp  integer.hpp  ledger.cpp  ledger.hpp  main.cpp  money.cpp  money.hpp
src/ledger/: Account.cpp  Account.hpp  Adjustment.cpp  Adjustment.hpp  ExtendedAdjustment.cpp  ExtendedAdjustment.hpp  Ledger.cpp  Ledger.hpp  Payee.cpp  Payee.hpp  Transaction.cpp  Transaction.hpp  account.cpp  account.hpp  account_table.cpp  account_table.hpp  adjustment.cpp  adjustment.hpp  adjustment_table.cpp  adjustment_table.hpp  event.hpp  identifier.cpp  identifier.hpp  ledger.cpp  ledger.hpp  ledger_impl.hpp  money.cpp  money.hpp  transaction.hpp
src/ledger/internal/: AccountTypeEntry.hpp  AdjustmentEntry.hpp  Database.cpp  Database.hpp  EntryProxy.hpp  FilteredTableView.hpp  Identifier.hpp  ListNode.hpp  Record.cpp  Record.hpp  RecordKeeper.hpp  TableView.hpp  TransactionEntry.hpp  TransactionTable.cpp  TransactionTable.hpp  account.cpp  account.hpp  account_table.cpp  account_table.hpp  adjustment.cpp  adjustment.hpp  adjustment_table.cpp  adjustment_table.hpp  joedb.cpp  ledger_impl.hpp  transaction.hpp
src/ledger/parse/: adjustment.hpp  transaction.cpp  transaction.hpp
src/ledger/transaction/: Builder.cpp  Builder.hpp
src/ledger/util/: Money.cpp  Money.hpp  stringify_arguments.cpp  stringify_arguments.hpp  transform_if.hpp
src/money/: money.hpp
src/util/: Date.hpp  Hapenny.cpp  Hapenny.hpp  Money.cpp  Money.hpp  Rational.cpp  Rational.hpp  money.cpp  money.hpp
test/: Makefile  decimal-test.cpp  identifier-test.cpp  main.cpp
test/ledger/: Ledger.cpp  ledger-test.cpp
test/ledger/parse/: transaction.cpp
test/ledger/transaction/: Builder.cpp
test/util/: Hapenny.cpp  Money.cpp  Rational.cpp
